Fix links in the README.org

--- a/README.org
+++ b/README.org
@@ -7,13 +7,14 @@ A massive personal, educational notes dump when studying several topics,
 using different media forms: books, blog posts, videos, code snippets, ...
 
 * Index
-** [[file:algorithms.org][wiki:Algorithms]]
-** [[file:c.org][wiki:C]]
-** [[file:cryptography.org][wiki:Cryptography]]
-** [[file:handmade-hero.org][wiki:Handmade Hero]]
-** [[file:html.org][wiki:DOM, Html and CSS]]
-** [[file:javascript.org][wiki:Javascript]]
-** [[file:linux.org][wiki:Linux]]
-** [[file:pixel-art.org][wiki:Pixel Art]]
-** [[file:python.org][wiki:Python]]
-** [[file:software-development][wiki:Software Development]]
+** [[file:algorithms.org][Algorithms]]
+** [[file:c.org][C]]
+** [[file:cryptography.org][Cryptography]]
+** [[file:handmade-hero.org][Handmade Hero]]
+** [[file:html.org][DOM, Html and CSS]]
+** [[file:javascript.org][Javascript]]
+** [[file:linux.org][Linux]]
+** [[file:pixel-art.org][Pixel Art]]
+** [[file:python.org][Python]]
+** [[file:software-development.org][Software Development]]
+** [[file:productivity.org][Productivity]]
