Clean up repository and split nodejs, servers from javascript

--- a/README.org
+++ b/README.org
@@ -11,10 +11,10 @@ using different media forms: books, blog posts, videos, code snippets, ...
 ** [[file:c.org][C]]
 ** [[file:cryptography.org][Cryptography]]
 ** [[file:handmade-hero.org][Handmade Hero]]
-** [[file:html.org][DOM, Html and CSS]]
+** [[file:web-design.org][HTML, CSS and Design]]
 ** [[file:javascript.org][Javascript]]
 ** [[file:linux.org][Linux]]
-** [[file:pixel-art.org][Pixel Art]]
+** [[file:productivity.org][Productivity]]
 ** [[file:python.org][Python]]
 ** [[file:software-development.org][Software Development]]
-** [[file:productivity.org][Productivity]]
+** [[file:web-development.org][Web Development]]
