Add tattoo ideas and possible artists

--- a/README.org
+++ b/README.org
@@ -9,12 +9,14 @@ using different media forms: books, blog posts, videos, code snippets, ...
 * Index
 ** [[file:algorithms.org][Algorithms]]
 ** [[file:c.org][C]]
+** [[file:cooking-recipes.org][Cooking Recipes]]
 ** [[file:cryptography.org][Cryptography]]
 ** [[file:handmade-hero.org][Handmade Hero]]
-** [[file:web-design.org][HTML, CSS and Design]]
 ** [[file:javascript.org][Javascript]]
 ** [[file:linux.org][Linux]]
 ** [[file:productivity.org][Productivity]]
 ** [[file:python.org][Python]]
 ** [[file:software-development.org][Software Development]]
+** [[file:tattoos.org][Tattoos]]
+** [[file:web-design.org][HTML, CSS and Design]]
 ** [[file:web-development.org][Web Development]]
