--- a/handmade-hero.org
+++ b/handmade-hero.org
@@ -9,12 +9,14 @@
 - [[https://www.amazon.com/Game-Programming-Patterns-Robert-Nystrom/dp/0990582906/ref=pd_sim_14_2?_encoding=UTF8&pd_rd_i=0990582906&pd_rd_r=4ACE7CH5N5S6J9NP64EF&pd_rd_w=XD1Tt&pd_rd_wg=yc1pf&psc=1&refRID=4ACE7CH5N5S6J9NP64EF][Game programming patterns]]
 - [[https://www.amazon.com/Engine-Architecture-Third-Jason-Gregory/dp/1138035459/ref=sr_1_1?keywords=game+engine+architecture&qid=1563911648&s=books&sr=1-1][Game Engine Architecture, Third Edition]]
 - [[https://www.amazon.com/Game-Coding-Complete-Fourth-McShaffry/dp/1133776574/ref=pd_sim_14_2?_encoding=UTF8&pd_rd_i=1133776574&pd_rd_r=9TQGA57P3Q0F85MAZXTP&pd_rd_w=i5EIx&pd_rd_wg=8Nb8o&psc=1&refRID=9TQGA57P3Q0F85MAZXTP][Game Coding Complete]]
+- [[http://www.dataorienteddesign.com/dodbook/][Data Oriented Design - Richard Fabian]]
 
 ** Videos
 - [[http://www.opowell.com/post/talks-that-changed-the-way-i-think-about-programming/][Talks that changed the way I think about programming]]
 - [[https://www.youtube.com/watch?v=UwBl7Rnkt78][Storytime with Jonathan Blow]]
 - [[https://www.youtube.com/watch?v=cTwh9oHcs1w][Making a game in C from scratch - Dan Zaidan]]
 - [[https://www.gamefromscratch.com/page/Complete-Blender-Game-Art-Tutorial-From-zero-experience-to-2D-or-3D-game-ready-asset.aspx][Complete Blender Game Art Tutorial]]
+- [[https://www.youtube.com/playlist?list=PLtg36xKlu60wk3buYHvAdtSbqPsvNgUDV][Thinking deeply about being a software engineer]]
 
 ** Inspiration
 - [[https://all-things-andy-gavin.com/2011/02/02/making-crash-bandicoot-part-1/][Making Crash Bandicoot]]
@@ -204,7 +206,7 @@ to the original folder.
 
 ** Debugging with Visual Studio
 Loading the /debugger/ of Visual Studio 2019 is achieved via the ~devenv~ command, which should have
-been set to the path already. ~devenv build\win32_hanmade~ loads the previously compiled code.
+been set to the path already. ~devenv build\win32_handmade.exe~ loads the previously compiled code.
 
 ** CRT, not Windows, calls our code
 The ~WinMain~ function is *not* the first thing Windows calls when executing our piece of code. The
